--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- JavaMail API for email notifications -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
