Fix UI width issues across all pages

--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,5 +1,10 @@
 # SMTP Configuration
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
-mail.smtp.username=your-email@gmail.com
-mail.smtp.password=your-app-password
+mail.smtp.username=subedirohit49@gmail.com
+mail.smtp.password=rvgw bjra xcym fona
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.from=HRMS System <subedirohit49@gmail.com>
+mail.reply-to=no-reply@hrms.com
+mail.enabled=false
