Implement email notifications and PDF export functionality

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,3 +3,14 @@ db.url=jdbc:postgresql://localhost:5432/
 db.name=hrms_db
 db.user=postgres
 db.password=Belbari890
+
+# Email Configuration
+mail.smtp.host=smtp.gmail.com
+mail.smtp.port=587
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.username=subedirohit49@gmail.com
+mail.password=rvgw bjra xcym fona
+mail.from=HRMS System <subedirohit49@gmail.com>
+mail.reply-to=no-reply@hrms.com
+mail.enabled=true
