Add recent activities to HR and Admin leave management pages

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -9,8 +9,8 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
-mail.username=
-mail.password=
-mail.from=HRMS System <>
+mail.username=subedirohit49@gmail.com
+mail.password=rvgw bjra xcym fona
+mail.from=HRMS System <subedirohit49@gmail.com>
 mail.reply-to=no-reply@hrms.com
-mail.enabled=false
+mail.enabled=true
